--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,11 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
-    "@prisma/client": "6.0.1",
-    "@supabase/supabase-js": "^2.86.0",
-    "bcrypt": "^6.0.0",
-    "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "dotenv": "^17.2.3",
+    "prisma": "^7.0.1",
+    "@prisma/client": "^7.0.1",
+    "@supabase/supabase-js": "^2.86.0",
     "nodemailer": "^7.0.11",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^4.7.1",
