--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,15 @@
     "prisma": "^7.0.1",
     "@prisma/client": "^7.0.1",
     "@supabase/supabase-js": "^2.86.0",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "prisma": "^7.0.1",
     "nodemailer": "^7.0.11",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^4.7.1",
