--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,20 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node sapp.js",
+    "start": "node app.js",
     "dev": "nodemon app.js",
-    "lint": "eslint .."
+    "lint": "eslint ..",
+    "auth-dev": "nodemon auth.js",
+    "grpc-server": "node fileUploadService.js",
+    "grpc-client": "node fileUploadClient.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^17.2.3",
-    "prisma": "^7.0.1",
+    "@aws-sdk/client-s3": "^3.943.0",
+    "@grpc/grpc-js": "^1.14.2",
+    "@grpc/proto-loader": "^0.7.15",
     "@prisma/client": "^7.0.1",
     "@supabase/supabase-js": "^2.86.0",
     "bcrypt": "^6.0.0",
@@ -23,9 +26,11 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.1.0",
+    "multer": "^2.0.2",
+    "multer-s3": "^3.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "prisma": "^7.0.1",
     "nodemailer": "^7.0.11",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^4.7.1",
@@ -34,6 +39,6 @@
   "devDependencies": {
     "eslint": "^8.40.0",
     "nodemon": "^2.0.22",
-    "prisma": "6.0.1"
+    "prisma": "^7.0.1"
   }
 }
