--- a/backend/package.json
+++ b/backend/package.json
@@ -8,14 +8,18 @@
     "lint": "eslint .."
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^17.2.3",
-    "prisma": "^7.0.1",
     "@prisma/client": "^7.0.1",
-    "@supabase/supabase-js": "^2.86.0"
+    "@supabase/supabase-js": "^2.86.0",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "prisma": "^7.0.1",
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^4.7.1",
+    "winston-elasticsearch": "^0.19.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "eslint": "^8.40.0"
+    "eslint": "^8.40.0",
+    "nodemon": "^2.0.22"
   }
 }
