--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "prisma": "^7.0.1",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^4.7.1",
-    "winston-elasticsearch": "^0.19.0"
+    "winston-elasticsearch": "^0.19.0",
+    "nodemailer": "^7.0.11"
   },
   "devDependencies": {
     "eslint": "^8.40.0",
