--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,4 +1,16 @@
 services:
+  postgres:
+    image: postgres:15
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=auctio_db
+    ports:
+      - "5432:5432"
+    networks:
+      - mynetwork
+    volumes:
+      - pgdata:/var/lib/postgresql/data
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
     environment:
@@ -28,4 +40,5 @@ networks:
   mynetwork:
 
 volumes:
+  pgdata:
   esdata:
