--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,11 @@
 {
   "name": "auction-backend",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "lint": "eslint .."
   },
   "dependencies": {
