--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,24 @@
 {
   "name": "auction-backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "lint": "eslint .."
   },
   "dependencies": {
-    "@prisma/client": "^7.0.1",
+    "@prisma/client": "^7.1.0",
     "@supabase/supabase-js": "^2.86.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "prisma": "^7.0.1",
+    "nodemailer": "^7.0.11",
+    "prisma": "^7.1.0",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^4.7.1",
-    "winston-elasticsearch": "^0.19.0",
-    "nodemailer": "^7.0.11"
+    "winston-elasticsearch": "^0.19.0"
   },
   "devDependencies": {
     "eslint": "^8.40.0",
