refactor: restructure seed

--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - mynetwork
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
     environment:
