--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,30 @@
 {
   "name": "auction-backend",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "main": "src/app.js",
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "lint": "eslint .."
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
-    "@prisma/client": "^7.1.0",
+    "@prisma/client": "6.0.1",
     "@supabase/supabase-js": "^2.86.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "nodemailer": "^7.0.11",
-    "prisma": "^7.1.0",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^4.7.1",
-    "winston-elasticsearch": "^0.19.0"
+    "winston-elasticsearch": "^0.16.0"
   },
   "devDependencies": {
     "eslint": "^8.40.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prisma": "6.0.1"
   }
 }
