--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "@aws-sdk/client-s3": "^3.943.0",
     "@grpc/grpc-js": "^1.14.2",
     "@grpc/proto-loader": "^0.7.15",
-    "@prisma/client": "^7.0.1",
+    "@prisma/client": "6.0.1",
     "@supabase/supabase-js": "^2.86.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -41,7 +41,7 @@
   "devDependencies": {
     "eslint": "^8.40.0",
     "nodemon": "^2.0.22",
-    "prisma": "^7.0.1",
+    "prisma": "6.0.1",
     "swagger-autogen": "^2.23.7"
   }
 }
