--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,8 @@
     "@aws-sdk/client-s3": "^3.943.0",
     "@grpc/grpc-js": "^1.14.2",
     "@grpc/proto-loader": "^0.7.15",
-    "@prisma/client": "^6.0.1",
+    "@prisma/client": "6.0.1",
     "@supabase/supabase-js": "^2.86.0",
-    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -33,8 +32,6 @@
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^4.7.1",
@@ -44,7 +41,7 @@
   "devDependencies": {
     "eslint": "^8.40.0",
     "nodemon": "^2.0.22",
-    "prisma": "^6.0.1",
+    "prisma": "6.0.1",
     "swagger-autogen": "^2.23.7"
   }
 }
