--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@grpc/grpc-js": "^1.14.2",
     "@grpc/proto-loader": "^0.7.15",
     "@prisma/client": "6.0.1",
+    "@scalar/express-api-reference": "^0.8.30",
     "@supabase/supabase-js": "^2.86.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -34,7 +35,6 @@
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "swagger-ui-express": "^5.0.1",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^4.7.1",
     "winston-elasticsearch": "^0.16.0",
