--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -14,6 +14,11 @@ dist
 dist-ssr
 *.local
 
+# Environment variables (contains secrets)
+.env
+.env.local
+.env.*.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
