--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.68.0",
     "react-router-dom": "^7.10.0",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
