feat: stripe payment endpoints

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,7 @@ SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
 SMTP_FROM="Auctio <noreply@auctio.com>"
 
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+
