--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "stripe": "^20.1.0",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^4.7.1",
     "winston-elasticsearch": "^0.16.0",
