--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -8,3 +8,7 @@ VITE_RE_SITE_KEY=your-recaptcha-site-key-here
 # API Base URL
 VITE_API_BASE_URL=http://localhost:3000
 
+# Stripe Publishable Key (test mode)
+# Get your key from: https://dashboard.stripe.com/test/apikeys
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+
